[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/scripts/resources/resource_pickup.gd" id="1_pickup"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[node name="ResourcePickup" type="Area2D"]
collision_layer = 16  # Layer 5 for resources
collision_mask = 2    # Layer 2 for player
script = ExtResource("1_pickup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Sprite" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"] 